--- a/mcq-app/package.json
+++ b/mcq-app/package.json
@@ -15,10 +15,14 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
+    "framer-motion": "^11.2.10",
     "froala-editor": "^4.2.0",
     "jest": "^29.7.0",
     "lucide-react": "^0.381.0",
-    "next": "14.2.3",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-froala-wysiwyg": "^4.2.0",
@@ -29,6 +33,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
